[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aftpy"
version = "2.0.1"
description = "Python package to Read, Visualize and download AFTmap data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bibhuti Kumar Jha", email = "bibhuraushan1@gmail.com"}
]
keywords = ["Sun", "Dataloader", "AFT", "SFT"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "astropy",
    "h5py",
    "sunpy",
    "pandas"
]

[project.urls]
Homepage = "https://bibhuraushan.github.io/aftpy"
Repository = "https://github.com/me/spam.git"

[project.entry-points.console_scripts]
aftview = "aftpy.cmdtools:aftview"
aftconvertor = "aftpy.cmdtools:aftconvertor"